# asistente

./: .gitignore  .justfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
src/: main.py  openmeteo.py  telegram.py
tests/: __init__.py  openmeteo_tests.py  telegram_tests.py
