[tool.poetry]
name = "asistente"
version = "0.1.0"
description = "A telegram assistant bot"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
